--- a/jkl/_config.yml
+++ b/jkl/_config.yml
@@ -22,8 +22,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 destination: ../www
 baseurl: /www # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dfeich
+github_username:  dfeich
 
 # Build settings
 markdown: kramdown
