--- a/jkl/_config.yml
+++ b/jkl/_config.yml
@@ -13,17 +13,19 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: dfeich''s blog
+title: dfeich blog
 email: dfeich@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog that I started mainly to explain my fascination with Emacs and
+  the many ways it can make you efficient.
 destination: ../www
 baseurl: /www # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dfeich
 github_username:  dfeich
+
+# do not delete ../www/assets/images when creating the new site
+keep_files: ["assets/images"] 
 
 # Build settings
 markdown: kramdown
